header movil terminado

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap" rel="stylesheet">
     <!-- fin fonts -->
     <!-- css -->
     <link rel="stylesheet" href="style.css">
@@ -13,23 +14,45 @@
     <title>Soler Vismara | Bienes Inmuebles</title>
 </head>
 <body>
-    <header class="top-header">
-        <div class="top-header__container container">
-                <ul class="top-header__contact-info">
-                    <li><a href="#"><img src="img/telephone.svg" alt="telephone icon" class="icon top-header__icon">+54 9 351 6 8794439</a></li>
-                    <li><a href="#"><img src="img/envelope.svg" alt="email icon" class="icon top-header__icon top-header__icon--envelope" >info@solervismara.com</a></li>
-                </ul>
-                <ul class="top-header__contact-info top-header__contact-info--last">
-                    <li><a href="#"><img src="img/facebook (1).svg" alt="facebook icon" class="icon top-header__icon"></a></li>
-                    <li><a href="#"><img src="img/instagram (1).svg" alt="instagram icon" class="icon top-header__icon top-header__icon--instagram"></a></li>
-                </ul>
+    <header class="header">
+        <!-- top header -->
+        <div class="top-header">
+            <div class="top-header__container container">
+                    <ul class="top-header__contact-info">
+                        <li><a href="#"><img src="img/telephone.svg" alt="telephone icon" class="icon top-header__icon">351 6 8794439</a></li>
+                        <li><a href="#"><img src="img/envelope.svg" alt="email icon" class="icon top-header__icon top-header__icon--envelope" >info@solervismara.com</a></li>
+                    </ul>
+                    <ul class="top-header__contact-info top-header__contact-info--last">
+                        <li><a href="#"><img src="img/facebook (1).svg" alt="facebook icon" class="icon top-header__icon"></a></li>
+                        <li><a href="#"><img src="img/twitter.svg" alt="twitter icon" class="icon top-header__icon top-header__icon--twitter"></a></li>
+                        <li><a href="#"><img src="img/instagram (1).svg" alt="instagram icon" class="icon top-header__icon top-header__icon--instagram"></a></li>
+                    </ul>
+            </div>
         </div>
+        <!-- fin top header -->
+        <!-- main header -->
+        <div class="main-header">
+            <div class="main-header__container container">
+                <picture class="main-header__logo">
+                    <img src="img/logo.svg" alt="logo empresa">
+                </picture>
+                <button class="main-header__button">
+                    MENU
+                    <div class="menu-wrapper">
+                        <div class="hamburger-menu"></div>
+                    </div>
+                </button>
+            </div>
+        </div>
+    <!-- fin main header -->
     </header>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui dignissimos repellendus odit eum ducimus cupiditate quis perspiciatis. Quibusdam facilis possimus, laboriosam tempore sint similique dicta eveniet numquam, odio ea in sed omnis architecto esse magnam explicabo corporis doloremque mollitia odit minus. Voluptate ad nesciunt accusantium, soluta aliquid vero iusto incidunt ex ipsam amet esse suscipit fugit neque dolorum dicta numquam itaque excepturi repudiandae quas corrupti officia nulla voluptatum. Eligendi quidem ea, dolore error ullam ipsum earum cupiditate, asperiores, ratione consequuntur laudantium reprehenderit quod est impedit rem odit esse natus accusantium dolorum. Repudiandae, sapiente perferendis dolore delectus repellendus vero, minima pariatur sint officiis minus eius vel ab corporis saepe? Nulla cupiditate, nam quod minus inventore adipisci eius voluptatibus iusto exercitationem accusamus deserunt soluta excepturi aut itaque illo alias, dicta perspiciatis iste consequuntur tenetur sunt totam odio neque quae. In nostrum, maxime sequi a sit quia provident natus commodi illum itaque quae, nemo rem. Eos, autem fugit! Eum iusto odit aperiam molestias nam iste pariatur, commodi explicabo, sequi sint provident quasi veritatis optio vel libero perferendis. Quisquam, amet corporis! Aliquid asperiores minima vel molestias, dolore perferendis laudantium eos est, nihil modi id recusandae. Officia animi consequatur nostrum aut modi facere ipsum, ad, maxime sint at quidem magnam? Aut, nisi sit rem quibusdam quas repellendus tempore totam sunt debitis harum eaque facilis tenetur provident recusandae hic corrupti illum odio ab laudantium, libero maxime. Corporis saepe quaerat mollitia, doloremque libero rem in dolores quas perferendis maxime veritatis! Blanditiis ipsam quisquam, non corrupti numquam saepe minus accusamus quaerat eos deleniti neque, labore cum aspernatur accusantium quos reiciendis consectetur molestias fugiat placeat eaque nam. Eveniet quaerat asperiores unde maiores corrupti recusandae? Dolor cumque quidem a repudiandae voluptatum doloribus ipsam laudantium! Earum placeat nihil, veritatis harum sapiente accusamus officia temporibus impedit nesciunt tenetur delectus fugiat odit eveniet asperiores omnis excepturi eos? Maiores quia repellat quaerat, dolore aliquam, consequatur doloremque atque ducimus laudantium dolorum, porro cumque est itaque? Culpa tempora maiores ex quisquam voluptatem minima eum sit aliquam omnis. Suscipit iste corrupti eos voluptate, placeat est repellendus impedit deleniti quisquam totam? Tenetur enim suscipit quis deleniti, exercitationem illo nemo maiores eum laborum velit quasi et quaerat esse itaque architecto tempore culpa ad nam adipisci natus temporibus! Quibusdam neque laborum quod pariatur dolor sequi vel et harum perspiciatis repellat voluptas illum laboriosam cumque a, maxime, fugit accusamus asperiores numquam nihil. Tempore nam laudantium ipsum ut, quibusdam praesentium fuga quisquam distinctio. Corporis sint dolor ducimus, eos laboriosam id perspiciatis labore saepe repudiandae quisquam iste sed molestias odit obcaecati eius et officia delectus. Odit, facilis quas enim voluptatum iusto quibusdam perferendis reiciendis aliquid atque quod vel praesentium ea ipsum laborum eius nemo accusantium dolores soluta ratione dolore omnis recusandae qui! Ipsum, modi. Ratione architecto atque accusantium nihil nulla repudiandae. Minima beatae neque eligendi delectus explicabo quod placeat accusantium sequi enim repellendus dolore ratione nam est deleniti, vitae eius quae numquam ipsa, quas expedita iusto, omnis odio repudiandae libero! Voluptas, nesciunt necessitatibus amet assumenda minus ut. Cumque ullam, facere dicta fugit sint porro voluptatibus reprehenderit. Itaque libero rerum rem possimus exercitationem totam laborum nostrum maxime cupiditate hic, laudantium assumenda, aspernatur impedit et tempore natus veritatis, quibusdam praesentium porro. Ad suscipit et omnis fuga assumenda dolorum. Assumenda voluptate hic provident dolore excepturi! Exercitationem aperiam voluptates cupiditate. Quidem soluta, ut eius debitis laudantium temporibus inventore consequatur dicta? Sapiente qui, cumque, modi fugiat quam itaque eum natus maxime totam voluptatem repellendus cupiditate iusto aliquam aliquid aut doloremque quisquam dolores officiis. Quisquam temporibus id delectus voluptate. Iure vel id dolor neque, facilis maxime ad enim, eaque dolorum quas aliquam quis doloribus, blanditiis exercitationem sint cupiditate eius qui perferendis deserunt sequi modi quaerat distinctio. Nam veritatis sit expedita quasi asperiores vel, illum laborum ratione numquam modi? Vero voluptas est nihil obcaecati mollitia nulla corrupti ratione, sit perspiciatis! Placeat voluptatem accusantium saepe illum reprehenderit magnam repudiandae dignissimos libero facere obcaecati laborum beatae asperiores ullam nisi rem minima sit, dolorem, assumenda veritatis architecto possimus, fugiat dolorum atque? Dolorum ipsam sint vitae aliquid deleniti in, beatae consequatur est quos, magnam maiores praesentium dolore excepturi? Quo provident aliquid, et, voluptate mollitia amet saepe, illo doloribus quibusdam nam dicta eius. Voluptatibus enim ipsam dignissimos dolor voluptates nobis. Est quasi, dolor itaque aliquid aspernatur doloribus quisquam sed optio accusantium natus illum libero ab eligendi illo vel perferendis adipisci repudiandae, exercitationem ipsum veritatis quam ducimus. Nihil sapiente enim excepturi culpa molestias repudiandae recusandae, illo nemo illum cum in corporis voluptatibus. Deserunt laudantium praesentium, ea, iure esse fuga quia minus recusandae aliquam facere tenetur quasi voluptate culpa? Hic, qui exercitationem? Deserunt, omnis debitis necessitatibus nemo fugit nisi, totam ipsa sapiente quisquam beatae unde officiis? Assumenda blanditiis non iure neque ullam ea molestiae nesciunt laborum deserunt architecto nobis incidunt hic pariatur voluptate porro mollitia vero rerum possimus tempore iusto, minima, corrupti, eaque enim quasi? Ipsa sit autem est quibusdam repellat mollitia iusto fuga accusamus. Cum odio, minus expedita libero modi, perferendis sit eveniet aperiam vitae fugit ut placeat aut deleniti! Vero, porro. Mollitia ratione fuga ullam molestiae sed totam distinctio fugiat nisi ad reprehenderit a obcaecati ipsa magni voluptas eum neque similique veritatis debitis aperiam, perferendis eveniet, accusantium dicta enim. Quasi illo ipsam optio qui impedit excepturi necessitatibus architecto ipsum, ducimus expedita, facilis dolorem! Reprehenderit ad iure soluta necessitatibus odit dignissimos iusto nulla saepe aut exercitationem, ea labore eligendi deserunt earum error veritatis asperiores corporis magnam voluptas vero modi architecto eius similique quas! Quo veniam officia sit pariatur cumque neque, vel modi hic ipsum debitis eveniet vero autem id optio molestiae! Laborum quod ab voluptate fugiat sint. Quos repellat mollitia, necessitatibus repellendus officia sint aperiam cum consequuntur tempora? Velit consequatur facere eligendi error nihil excepturi modi, ratione, quidem deserunt debitis incidunt odio quasi deleniti, hic nostrum corporis maxime neque impedit perspiciatis nemo doloremque magni reprehenderit dolorem. Aut consequuntur voluptas similique consectetur exercitationem odit doloribus cum cupiditate minus distinctio, ab mollitia ea repellendus ut quaerat tempore laudantium itaque, reiciendis aperiam non accusamus? Non veritatis rerum ipsa qui, assumenda temporibus odio fugit eveniet nobis quidem vero iure quo.</p>
     <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
     <script src="js/svg-inject.min.js"></script>
+    <script src="script.js"></script>
     <script>
         SVGInject(document.querySelectorAll("img.icon"));
     </script>
