--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                         <div class="hamburger-menu"></div>
                     </div>
                 </button>
+                <!-- inicio nav -->
+                <nav class="navegacion">
+                    <ul class="navegacion__contenedor">
+                        <li class="navegacion__elemento navegacion__elemento--first"><a class="navegacion__link" href="#">INICIO</a></li>
+                        <li class="navegacion__elemento"><a class="navegacion__link" href="#">INMUEBLES</a></li>
+                        <li class="navegacion__elemento"><a class="navegacion__link" href="#">QUIENES SOMOS</a></li>
+                        <li class="navegacion__elemento"><a class="navegacion__link" href="#">CONTACTO</a></li>
+                    </ul>
+                </nav>
+                <!-- fin nav -->
             </div>
         </div>
     <!-- fin main header -->
