--- a/index.html
+++ b/index.html
@@ -115,6 +115,46 @@
             <img class="buscador__icono icon" src="img/magnifier.svg" alt="lupa icono">
             <span class="buscador__texto">buscar inmueble por caracteristicas</span>
         </button>
+        <form class="buscador__formulario container">
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Operación</option>
+                <option value="compra">Compra</option>
+                <option value="alquiler">Alquiler</option>
+            </select>
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Tipo de inmueble</option>
+                <option value="casa">Casa</option>
+                <option value="departamento">Departamento</option>
+            </select>
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Dormitorios</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Baños</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Provincia</option>
+                <option value="Cordoba">Cordoba</option>
+                <option value="Buenos Aires">Buenos Aires</option>
+            </select>
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Metros Cuadrados</option>
+            </select>
+            <select class="buscador__elemento-select">
+                <option value="" selected disabled hidden>Precio</option>
+            </select>
+            <button type="submit" class="buscador__elemento-boton">BUSCAR</button>
+        </form>
     </section>
     <!-- fin buscador index -->
     <!-- seccion destacados -->
