--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <!-- fin top header -->
         <!-- main header -->
         <div class="main-header">
-            <div class="main-header__container container">
+            <div class="main-header__container container">      
                 <picture class="main-header__logo">
+                    <source media="(min-width: 1025px)" srcset="img/logotexto.svg">
                     <img src="img/logo.svg" alt="logo empresa">
                 </picture>
                 <button class="main-header__button">
@@ -297,15 +298,17 @@
     <!-- fin seccion tasaciones -->
     <!-- footer -->
     <footer class="footer">
-        <div class="contacto">
-            <h2 class="contacto__titulo">CONTACTO</h2>
-            <p class="contacto__descripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur laboriosam hic, rerum molestias facilis quibusdam voluptate quis harum asperiores!</p>
-            <ul class="contacto__info">
-                <li><img class="contacto__icono icon" src="img/map.svg" alt="icono gps">Av. Colon 168 - Piso 3 - Oficina G</li>
-                <li><img class="contacto__icono icon" src="img/envelope.svg" alt="icono gps">info@solervismara.com</li>
-                <li><img class="contacto__icono icon" src="img/telephone.svg" alt="icono gps">0351 4589652</li>
-            </ul>
-            <iframe  class="contacto__mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.0428677821155!2d-64.18736968445977!3d-31.412944981405214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2829c01190d%3A0xb3dbb12bee9d3a8f!2sAv.%20Col%C3%B3n%20168%2C%20X5022%20C%C3%B3rdoba!5e0!3m2!1sen!2sar!4v1576180339294!5m2!1sen!2sar" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div class="container">
+            <div class="contacto">
+                <h2 class="contacto__titulo">CONTACTO</h2>
+                <p class="contacto__descripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur laboriosam hic, rerum molestias facilis quibusdam voluptate quis harum asperiores!</p>
+                <ul class="contacto__info">
+                    <li><img class="contacto__icono icon" src="img/map.svg" alt="icono gps">Av. Colon 168 - Piso 3 - Oficina G</li>
+                    <li><img class="contacto__icono icon" src="img/envelope.svg" alt="icono gps">info@solervismara.com</li>
+                    <li><img class="contacto__icono icon" src="img/telephone.svg" alt="icono gps">0351 4589652</li>
+                </ul>
+                <iframe  class="contacto__mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.0428677821155!2d-64.18736968445977!3d-31.412944981405214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2829c01190d%3A0xb3dbb12bee9d3a8f!2sAv.%20Col%C3%B3n%20168%2C%20X5022%20C%C3%B3rdoba!5e0!3m2!1sen!2sar!4v1576180339294!5m2!1sen!2sar" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
         </div>
         <div class="copyright">	&copy; Copyright 2019 . Sitio Desarrollado por <a target="_blank" href="https://www.facebook.com/Ghipsio-111415540321377">Ghipsio Web Design</a></div>
     </footer>
