--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- inicio servicios -->
     <section class="servicios">
         <ul class="servicios__contenedor container">
-            <li class="servicios__elemento">
+            <li class="servicios__elemento servicios__elemento--first">
                 <a href="#test" class="servicios__link">
                     <img class="servicios__imagen icon" src="img/building.svg" alt="icono departamento">
                     <h2 class="servicios__titulo">DEPARTAMENTO</h2>
@@ -298,7 +298,35 @@
     <!-- fin seccion tasaciones -->
     <!-- footer -->
     <footer class="footer">
-        <div class="container">
+        <div class="footer__container container">
+            <div class="recientes">
+                <h2 class="recientes__titulo">LO MAS RECIENTE</h2>
+                <ul class="recientes__info">
+                    <li>UNO</li>
+                    <li>DOS</li>
+                    <li>TRES</li>
+                    <li>CUATRO</li>
+                </ul>
+            </div>
+            <div class="links">
+                <h2 class="links__titulo">LINKS</h2>
+                <ul class="links__info">
+                    <li><a href="#">Inicio</a></li>
+                    <li>
+                        <a href="#">Inmuebles</a>
+                        <ul>
+                            <li>Departamento</li>
+                            <li>Casa</li>
+                            <li>Oficina</li>
+                            <li>Local</li>
+                            <li>Campo</li>
+                            <li>Terreno</li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Quienes Somos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </div>
             <div class="contacto">
                 <h2 class="contacto__titulo">CONTACTO</h2>
                 <p class="contacto__descripcion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur laboriosam hic, rerum molestias facilis quibusdam voluptate quis harum asperiores!</p>
@@ -309,7 +337,7 @@
                 </ul>
                 <iframe  class="contacto__mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.0428677821155!2d-64.18736968445977!3d-31.412944981405214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2829c01190d%3A0xb3dbb12bee9d3a8f!2sAv.%20Col%C3%B3n%20168%2C%20X5022%20C%C3%B3rdoba!5e0!3m2!1sen!2sar!4v1576180339294!5m2!1sen!2sar" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
-        </div>
+        </div>  
         <div class="copyright">	&copy; Copyright 2019 . Sitio Desarrollado por <a target="_blank" href="https://www.facebook.com/Ghipsio-111415540321377">Ghipsio Web Design</a></div>
     </footer>
     <!-- fin footer -->
