--- a/index.html
+++ b/index.html
@@ -302,10 +302,36 @@
             <div class="recientes">
                 <h2 class="recientes__titulo">LO MAS RECIENTE</h2>
                 <ul class="recientes__info">
-                    <li>UNO</li>
-                    <li>DOS</li>
-                    <li>TRES</li>
-                    <li>CUATRO</li>
+                    <li class="propiedad-reciente">
+                        <a href="#1" class="propiedad-reciente__link">
+                            <img class="propiedad-reciente__imagen" src="img/1.jpg">
+                            <div class="propiedad-reciente__contenido">
+                                <h2 class="propiedad-reciente__titulo">Beautiful Single Home 1</h2>
+                                <span class="propiedad-reciente__fecha">19 de Diciembre 2019</span>
+                                <span class="propiedad-reciente__precio">$250000</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="propiedad-reciente">
+                        <a href="#2" class="propiedad-reciente__link">
+                            <img class="propiedad-reciente__imagen" src="img/2.jpg">
+                            <div class="propiedad-reciente__contenido">
+                                <h2 class="propiedad-reciente__titulo">Departamento 2</h2>
+                                <span class="propiedad-reciente__fecha">10 de Diciembre 2019</span>
+                                <span class="propiedad-reciente__precio">$2500000</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="propiedad-reciente">
+                        <a href="#3" class="propiedad-reciente__link">
+                            <img class="propiedad-reciente__imagen" src="img/3.jpg">
+                            <div class="propiedad-reciente__contenido">
+                                <h2 class="propiedad-reciente__titulo">Campo 1</h2>
+                                <span class="propiedad-reciente__fecha">19 de Octubre 2019</span>
+                                <span class="propiedad-reciente__precio">$150000</span>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="links">
